--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,16 @@
+2003-11-24  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator.adb:
+	(Main): New procedure.
+	(Generate_Main): New procedure to generate a simple main server or
+	 a main from a template file.
+	(Start_Service): Call Generate_Main if needed.
+	A step further to make it easier to build a SOAP server.
+
+	* soap-generator.ads:
+	(Main): New procedure.
+	(Object): Add Main field.
+
 2003-11-23  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator.adb:
