--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-24  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* wsdl2aws.adb:
+	(Main): New variable.
+	(Parse_Command_Line): Add support for option -main.
+
+2003-11-24  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* makefile:
 	(clean): Add ada2wsdl-options.adb.
 
