--- a/docs/TODO
+++ b/docs/TODO
@@ -192,7 +192,9 @@ implemented:
 - Add GNAT project files to use AWS. Only support for developpers has been
   implemented.
 
-- Document ada2wsdl and new wsdl2aws -types option.
+- Document ada2wsdl
+
+- Document wsdl2aws -cb / -types / -main options.
 
 - Add a simple Web Mail service (AWS.Services.Web_Mail) using the AWS.POP and
   AWS.SMTP API.
