--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,23 @@
+2003-11-27  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator.adb:
+	(Generate_Array): Handles constrained arrays.
+
+	* soap-utils.ads, soap-utils.adb:
+	(To_T_Array_C): New routine.
+	(To_Object_Set_C): Idem.
+
+	* soap-wsdl-parameters.ads:
+	(Parameter): Add Length field.
+
+	* soap-wsdl-parser.adb:
+	(Array_Elements): Parse the array length constraint and set
+	 corresponding object's field.
+	(Parse_Array): Set array parameter length value.
+
+	* soap-wsdl-parser.ads:
+	(Object): Add Array_Length field.
+
 2003-11-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator.adb:
