Add:  - Document ada2wsdl main template feature

--- a/docs/TODO
+++ b/docs/TODO
@@ -199,3 +199,5 @@ implemented:
 
 - Add support for transient page on-disk after a certain amount of time.
   Is that a good idea ?
+
+- Document ada2wsdl main template feature
