--- a/docs/TODO
+++ b/docs/TODO
@@ -146,6 +146,8 @@ implemented:
   templates engine. A new filter REPLACE for example that could be used as
   a 's/.../.../g' command.
 
+- Add support for certificate on the client side
+
 =============== Point to fix/implement/review before next release (1.5)
 
 - Add SMTP authentication support
