--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,14 @@
 2003-11-30  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* aws-pop.adb:
+	Pass Index to Action.
+
+	* aws-pop.ads:
+	(For_Every_Message): Add Index parameter to formal generic procedure.
+	Add some comments.
+
+2003-11-30  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* aws-pop.ads, aws-pop.adb:
 	Change Server by Mailbox. Better reading API.
 	(Mailbox_Size): Renamed to Size. This is a consequence of above
