--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* split.adb:
+	Fix typo in Anisimkov surname.
+
 2003-11-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
