--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_SOAP): Add zstrm3.
+
+	* zstrm3.adb, zstrm3.out:
+	Initial revision.
+	
 2003-12-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* *.ads, *.adb:
