--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* hotplug.adb:
+	Minor style fix.
+
 2003-12-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* split.adb:
