--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2003-12-04  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* aws-config.ads:
+	Fix typo.
+
 	* aws-resources-streams-memory.ads:
 	(Append): Minor comment fixes.
 
