--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.ads, templates_parser.adb:
+	Update to new version.
+	("&"): Add versions to prepend data into the vector.
+
 2003-12-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* memory_streams.ads,  memory_streams.adb:
