--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,14 @@
+2003-12-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(DEMOS): Add web_mail.
+
+	* wm_login.html, wm_message.thtml, wm_summary.thtml:
+	Initial revision.
+
+	* web_mail.adb:
+	Initial revision.
+
 2003-12-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* hotplug.adb:
