--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.ads:
+	Update copyright notice.
+
 2003-12-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser.ads, templates_parser.adb:
