--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-10  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add timer.
+
+	* timer.adb, timer.out:
+	Initial revision.
+
 2003-12-08  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
