--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-10  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-types.ads, soap-types.adb:
+	Minor reformatting.
+
 2003-11-28  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator-cb.adb:
