--- a/docs/TODO
+++ b/docs/TODO
@@ -74,8 +74,8 @@ implemented:
 - Add support for more XML Schema types
   See "C Datatypes and Facets" in XML Schema Part 2 Datatypes.
 
-  byte, unsignedByte, short, unsignedShort, unsignedInt, long, unsignedLong
-  double, date, time, xsd:hexBinary, decimal
+  byte, unsignedByte, short, unsignedShort, unsignedInt, long,
+  unsignedLong, date, time, xsd:hexBinary, decimal
 
   decimal is certainly a bit difficult to support, we need an arbitrary
   precision package.
@@ -142,7 +142,25 @@ implemented:
         </complexType> 
     </element>  
 
-- Add support for certificate on the client side
+- Add support for certificate on the client side, some code snippets found
+  on the Net:
+
+    X509*    server_cert;
+    char*    str;
+
+    /* Get server's certificate (note: beware of dynamic allocation) - opt */
+    server_cert = SSL_get_peer_certificate (ssl);
+
+  => server_cert should not be NULL
+
+    str = X509_NAME_oneline (X509_get_subject_name (server_cert),0,0);
+
+  => To get the subject (whatever it means)
+
+    str = X509_NAME_oneline (X509_get_issuer_name  (server_cert),0,0);
+
+  => To get the issuer
+
 
 =============== Point to fix/implement/review before next release (1.5)
 
@@ -169,3 +187,7 @@ implemented:
 
 - Improve the Web_Mail high level service to be able to reply and to handle CC
   recipients.
+
+- Add doc about creating a self signed test certificate
+
+  $ openssl req -new -x509 -key privkey.pem -out cacert.pem -days 1095
