--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-18  Pascal Obry  <obry@act-europe.fr>
+
+	* awsres.adb:
+	Minor reformatting.
+
 2003-12-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* awsres.adb:
