--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* tmem.adb:
+	Test new Constant_Access type and Trim parameter.
+
 2003-12-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* zres.adb, zres.out:
