--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-communication-server.adb:
+	(Internal_Callback): New type.
+	(To_Callback): New routine.
+	(Start): Remove use of Unrestricted_Access.
+	Remove commented out with clause.
+	Minor reformatting.
+
 2003-12-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-resources.ads, aws-resources.adb:
