--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* tools.gpr:
+	Add ASIS project support.
+	(Linker): Handle all tools.
+	Minor reformatting.
+
 2003-12-18  Pascal Obry  <obry@act-europe.fr>
 
 	* awsres.adb:
