--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,12 @@
 2003-12-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-communication-server.adb:
+	(Internal_Callback): Derived from AWS.Response.Callback. Cleaner
+	 implementation for previous check-in.
+	
+2003-12-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-communication-server.adb:
 	(Internal_Callback): New type.
 	(To_Callback): New routine.
 	(Start): Remove use of Unrestricted_Access.
